--- a/index.html
+++ b/index.html
@@ -4,25 +4,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style/normalize.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Kanit:ital,wght@0,400;0,500;0,600;1,700&family=Poppins:wght@400;500;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style/style.css">
   <title>Single page website</title>
 </head>
 
 <body>
   <header class="header">
-    <nav class="header__menu menu">
-      <div class="menu__logo">
-        <img src="" alt="header-logo">
+    <div class="container">
+      <nav class="header__menu menu">
+        <div class="menu__logo">
+          <a class="menu__logo-action" href="">
+            <img class="menu__logo-img" src="img/header/header-logo.png" alt="header-logo">
+          </a>
+        </div>
+
+        <div class="menu__hamburger">
+          <span class="menu__hamburger-row"></span>
+          <span class="menu__hamburger-row"></span>
+          <span class="menu__hamburger-row"></span>
+        </div>
+
+        <div class="menu__actions">
+          <ul class="menu__actions-list">
+            <li class="menu__action-item">
+              <a href="" class="menu__action-link">Location</a>
+            </li>
+            <li class="menu__action-item">
+              <a href="" class="menu__action-link">Gallery</a>
+            </li>
+            <li class="menu__action-item">
+              <a href="" class="menu__action-link">About</a>
+            </li>
+            <li class="menu__action-item">
+              <a href="" class="menu__action-link">Team</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="header__content">
+        <h1 class="header__content-title">Some Title</h1>
+        <p class="header__content-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <button class="header__content-action">Click me!</button>
       </div>
-      <div class="menu__actions">
-        <ul class="menu__actions-wrap">
-          <li class="menu__actions-item">Action 1</li>
-          <li class="menu__actions-item">Action 2</li>
-          <li class="menu__actions-item">Action 3</li>
-          <li class="menu__actions-item">Action 4</li>
-        </ul>
-      </div>
-    </nav>
+    </div>
   </header>
+
+  <main class="main">
+    <section class="location">
+      <div class="container">
+        <h2 class="location__title">Our Location</h2>
+        <strong class="location__anchor">Top</strong>
+        <iframe class="location__map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d783.4657529907815!2d-0.5298440337794486!3d38.236304006849956!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd624b94be99c89b%3A0xfd2a6b7f8e8913c3!2sLa%20Gu%C3%ADa%20Gran%20Alacant!5e0!3m2!1suk!2ses!4v1705320905578!5m2!1suk!2ses"
+          width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <p class="location__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
+          laboriosam fuga, accusantium nesciunt saepe quibusdam doloremque nemo, quam unde maxime suscipit eaque dolore
+          fugit expedita consequatur voluptatem necessitatibus debitis sed.
+        </p>
+        <p class="location__description">
+          Nemo, excepturi autem molestias aliquid quasi non delectus quas soluta exercitationem repellat adipisci nisi
+          facilis explicabo consectetur! Perferendis, voluptatibus officia ab maxime, aspernatur rem, in quam temporibus
+          cumque consequuntur atque.
+        </p>
+        <p class="location__description">
+          Dolor saepe alias beatae, temporibus in qui minus officiis ad nihil vel exercitationem doloremque soluta earum
+          veniam consequatur animi consequuntur et blanditiis cupiditate quasi quidem. Quam cum voluptas in quisquam!
+        </p>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
