Done about and team sections

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
               <a class="menu__action-link" href="#location">Location</a>
             </li>
             <li class="menu__action-item">
-              <a class="menu__action-link" href="">Gallery</a>
+              <a class="menu__action-link" href="#gallery">Gallery</a>
             </li>
             <li class="menu__action-item">
-              <a class="menu__action-link" href="">About</a>
+              <a class="menu__action-link" href="#about">About</a>
             </li>
             <li class="menu__action-item">
-              <a class="menu__action-link" href="">Team</a>
+              <a class="menu__action-link" href="#team">Team</a>
             </li>
           </ul>
         </div>
@@ -86,7 +86,7 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section id="gallery" class="gallery">
       <div class="container">
         <div class="gallery__head head">
           <h2 class="head__title">Gallery</h2>
@@ -95,10 +95,143 @@
           </strong>
         </div>
         <div class="gallery__wrap">
-          <img class="gallery__img 01" src="img/gallery/01.jpg" alt="space img">
-          <img class="gallery__img 02" src="img/gallery/02.jpg" alt="space img">
-          <img class="gallery__img 03" src="img/gallery/03.jpg" alt="space img">
-          <img class="gallery__img 04" src="img/gallery/04.jpg" alt="space img">
+          <img class="gallery__img img-01" src="img/gallery/01.jpg" alt="space img">
+          <img class="gallery__img img-02" src="img/gallery/02.jpg" alt="space img">
+          <img class="gallery__img img-03" src="img/gallery/03.jpg" alt="space img">
+          <img class="gallery__img img-04" src="img/gallery/04.jpg" alt="space img">
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="about">
+      <div class="container">
+        <div class="about__head head">
+          <h2 class="head__title">About</h2>
+          <strong class="head__anchor">
+            <a class="head__anchor-action" href="#header">Top</a>
+          </strong>
+        </div>
+        <div class="about__wrap">
+          <article class="about__item earth">
+            <img class="about__img" src="img/about/earth.jpg" alt="earth">
+            <p class="about__description">
+              <b>Description:</b> Earth is the third planet from the Sun in our solar system. It is the only known
+              celestial body to support life, characterized by diverse ecosystems, climates, and geological features.
+              Earth has a breathable atmosphere and is home to a variety of organisms, including humans.
+            </p>
+            <p class="about__description">
+              <b>Notable Features:</b> Oceans, continents, diverse landscapes, and a variety of ecosystems.
+            </p>
+          </article>
+          <article class="about__item jupiter">
+            <img class="about__img" src="img/about/jupiter.jpg" alt="jupiter">
+            <p class="about__description">
+              <b>Description:</b> Jupiter is the largest planet in our solar system, a gas giant with no solid surface.
+              It is known for its prominent bands of clouds and a massive storm called the Great Red Spot.
+            </p>
+            <p class="about__description">
+              <b>Notable Features:</b> Great Red Spot, multiple moons (including the largest, Ganymede), and a strong
+              magnetic field.
+            </p>
+          </article>
+          <article class="about__item mars">
+            <img class="about__img" src="img/about/mars.jpg" alt="mars">
+            <p class="about__description">
+              <b>Description:</b> Mars, often called the "Red Planet," is the fourth planet from the Sun. It is known
+              for its reddish appearance due to iron oxide on its surface. Mars has been a target for exploration due to
+              its potential for past or present life.
+            </p>
+            <p class="about__description">
+              <b>Notable Features:</b> Olympus Mons (largest volcano), Valles Marineris (large canyon), and polar ice
+              caps.
+            </p>
+          </article>
+          <article class="about__item moon">
+            <img class="about__img" src="img/about/moon.jpg" alt="moon">
+            <p class="about__description">
+              <b>Description:</b> Earth's only natural satellite, the Moon, is the fifth-largest moon in the solar
+              system. It has a significant impact on Earth's tides and has been a subject of fascination throughout
+              human history.
+            </p>
+            <p class="about__description">
+              <b>Notable Features:</b> Craters, lunar seas, and varying surface terrains.
+            </p>
+          </article>
+          <article class="about__item saturn">
+            <img class="about__img" src="img/about/saturn.jpg" alt="saturn">
+            <p class="about__description">
+              <b>Description:</b> Saturn is the second-largest planet, known for its stunning ring system made up of ice
+              particles, dust, and rocks. It is a gas giant with a lower density than water, meaning it could float in a
+              giant bathtub.
+            </p>
+            <p class="about__description">
+              <b>Notable Features:</b> Spectacular ring system, diverse moons, and a hexagonal storm on its north pole.
+            </p>
+          </article>
+          <article class="about__item sun">
+            <img class="about__img" src="img/about/sun.jpg" alt="sun">
+            <p class="about__description">
+              <b>Description:</b> The Sun is the star at the center of our solar system. It is a hot, glowing ball of
+              gas that provides heat and light to the planets through nuclear fusion reactions in its core.
+            </p>
+            <p class="about__description">
+              <b>Notable Features:</b> Core (nuclear fusion), photosphere (visible surface), solar flares, and sunspots.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="team" class="team">
+      <div class="container">
+        <div class="about__head head">
+          <h2 class="head__title">Team</h2>
+          <strong class="head__anchor">
+            <a class="head__anchor-action" href="#header">Top</a>
+          </strong>
+        </div>
+        <div class="team__wrap">
+          <article class="team__mate mate">
+            <img class="mate__photo" src="img/team/cris.jpg" alt="cris">
+            <p class="mate__description">
+              <b>Background:</b> Canadian astronaut and former commander of the International Space Station (ISS).
+            </p>
+            <p class="mate__description">
+              <b>Notable:</b> Gained popularity for sharing his experiences on social media and performing music in
+              space.
+            </p>
+          </article>
+          <article class="team__mate mate">
+            <img class="mate__photo" src="img/team/eileen.jpg" alt="eileen">
+            <p class="mate__description">
+              <b>Background:</b> American astronaut and the first female Space Shuttle pilot and commander.
+            </p>
+            <p class="mate__description">
+              <b>Notable:</b> Led the STS-93 mission, deploying the Chandra X-ray Observatory, and commanded the STS-114
+              "Return to Flight" mission.
+            </p>
+          </article>
+          <article class="team__mate mate">
+            <img class="mate__photo" src="img/team/koichi.jpg" alt="koichi">
+            <p class="mate__description">
+              <b>Background:</b> Japanese astronaut and engineer, Koichi Wakata has a distinguished career in space
+              exploration.
+            </p>
+            <p class="mate__description">
+              <b>Notable:</b> Holds the record for the longest cumulative time spent in space by a Japanese astronaut.
+              Contributed to various space missions, including assembling the ISS.
+            </p>
+          </article>
+          <article class="team__mate mate">
+            <img class="mate__photo" src="img/team/tim.jpg" alt="tim">
+            <p class="mate__description">
+              <b>Background:</b> British astronaut and former European Space Agency (ESA) astronaut.
+            </p>
+            <p class="mate__description">
+              <b>Notable:</b> Conducted numerous scientific experiments on the ISS during his Principia mission and
+              engaged with the public through educational activities.
+            </p>
+          </article>
         </div>
       </div>
     </section>
