--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Kanit:ital,wght@0,400;0,500;0,600;1,700&family=Poppins:wght@400;500;600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="icon" href="img/header/header-logo.png">
   <title>Single page website</title>
 </head>
 
@@ -49,7 +50,7 @@
       </nav>
 
       <div class="header__content">
-        <h1 class="header__content-title">Some Title</h1>
+        <h1 class="header__content-title">Welcome to space!</h1>
         <p class="header__content-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         <button class="header__content-action">Click me!</button>
       </div>
@@ -236,6 +237,16 @@
       </div>
     </section>
   </main>
+
+  <footer class="footer">
+    <div class="container">
+      <p class="footer__rights">All rights reserved | Done by student of BCS</p>
+      <p class="footer__rights">calle Canarias, 10. Gran Alacant</p>
+      <p class="footer__rights">Call 24\7
+        <a class="footer__rights-action" href="tel:+34123123123">+34123123123</a>
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
