Changes in code

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         </div>
         <iframe class="location__map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d783.4657529907815!2d-0.5298440337794486!3d38.236304006849956!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd624b94be99c89b%3A0xfd2a6b7f8e8913c3!2sLa%20Gu%C3%ADa%20Gran%20Alacant!5e0!3m2!1suk!2ses!4v1705320905578!5m2!1suk!2ses"
-          width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
+          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
         <p class="location__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
           laboriosam fuga, accusantium nesciunt saepe quibusdam doloremque nemo, quam unde maxime suscipit eaque dolore
@@ -114,6 +113,7 @@
         </div>
         <div class="about__wrap">
           <article class="about__item earth">
+            <h3 class="about__item-title">Earth</h3>
             <img class="about__img" src="img/about/earth.jpg" alt="earth">
             <p class="about__description">
               <b>Description:</b> Earth is the third planet from the Sun in our solar system. It is the only known
@@ -125,6 +125,7 @@
             </p>
           </article>
           <article class="about__item jupiter">
+            <h3 class="about__item-title">Jupiter</h3>
             <img class="about__img" src="img/about/jupiter.jpg" alt="jupiter">
             <p class="about__description">
               <b>Description:</b> Jupiter is the largest planet in our solar system, a gas giant with no solid surface.
@@ -136,6 +137,7 @@
             </p>
           </article>
           <article class="about__item mars">
+            <h3 class="about__item-title">Mars</h3>
             <img class="about__img" src="img/about/mars.jpg" alt="mars">
             <p class="about__description">
               <b>Description:</b> Mars, often called the "Red Planet," is the fourth planet from the Sun. It is known
@@ -148,6 +150,7 @@
             </p>
           </article>
           <article class="about__item moon">
+            <h3 class="about__item-title">Moon</h3>
             <img class="about__img" src="img/about/moon.jpg" alt="moon">
             <p class="about__description">
               <b>Description:</b> Earth's only natural satellite, the Moon, is the fifth-largest moon in the solar
@@ -159,6 +162,7 @@
             </p>
           </article>
           <article class="about__item saturn">
+            <h3 class="about__item-title">Saturn</h3>
             <img class="about__img" src="img/about/saturn.jpg" alt="saturn">
             <p class="about__description">
               <b>Description:</b> Saturn is the second-largest planet, known for its stunning ring system made up of ice
@@ -170,6 +174,7 @@
             </p>
           </article>
           <article class="about__item sun">
+            <h3 class="about__item-title">Sun</h3>
             <img class="about__img" src="img/about/sun.jpg" alt="sun">
             <p class="about__description">
               <b>Description:</b> The Sun is the star at the center of our solar system. It is a hot, glowing ball of
@@ -193,6 +198,7 @@
         </div>
         <div class="team__wrap">
           <article class="team__mate mate">
+            <h3 class="mate__name">Chris Hadfield</h3>
             <img class="mate__photo" src="img/team/cris.jpg" alt="cris">
             <p class="mate__description">
               <b>Background:</b> Canadian astronaut and former commander of the International Space Station (ISS).
@@ -203,6 +209,7 @@
             </p>
           </article>
           <article class="team__mate mate">
+            <h3 class="mate__name">Eileen Collins</h3>
             <img class="mate__photo" src="img/team/eileen.jpg" alt="eileen">
             <p class="mate__description">
               <b>Background:</b> American astronaut and the first female Space Shuttle pilot and commander.
@@ -213,6 +220,7 @@
             </p>
           </article>
           <article class="team__mate mate">
+            <h3 class="mate__name">Koichi Wakata</h3>
             <img class="mate__photo" src="img/team/koichi.jpg" alt="koichi">
             <p class="mate__description">
               <b>Background:</b> Japanese astronaut and engineer, Koichi Wakata has a distinguished career in space
@@ -224,6 +232,7 @@
             </p>
           </article>
           <article class="team__mate mate">
+            <h3 class="mate__name">Tim Peake</h3>
             <img class="mate__photo" src="img/team/tim.jpg" alt="tim">
             <p class="mate__description">
               <b>Background:</b> British astronaut and former European Space Agency (ESA) astronaut.
